syntax = "proto3";

package gov.cms.mpsm.rda.v1.mcs;

option java_multiple_files = true;

import "rda/v1/mcs/mcs_diagnosis_icd_type.proto";

message McsDiagnosisCode {
  string idr_clm_hd_icn = 1;

  // Note: Not on original claim.
  optional McsDiagnosisIcdType diag_icd_type = 2;

  // Note: Not on original claim.
  optional string diag_code = 3;
}
